Update interactive JS, remove appearance for inputText, update buttons

--- a/src/styles/inputs.less
+++ b/src/styles/inputs.less
@@ -41,7 +41,7 @@ div, .luxInput, div[class^='icheck'], div[class^='iradio'], input {
 		top: 0;
 		left: 0;
 		text-align:center;
-		font-size: 1.8em;
+		font-size: 1.6em;
 	}
 	.icheckbox_flat.disabled {
 		cursor: default;
@@ -175,6 +175,7 @@ div, .luxInput, div[class^='icheck'], div[class^='iradio'], input {
 		border: @local_border;
 		border-radius: 3px;
 		padding: 5px;
+		.appearance(none);
 		&:focus {
 			outline: none;
 			border-color: @local_positive_colour;
