--- a/src/styles/helpers/button-click-animation.less
+++ b/src/styles/helpers/button-click-animation.less
@@ -10,67 +10,67 @@
 
 	@keyframes ~'@{animation_name}' {
 		25%{
-			transform: scale(.95);
+			//transform: scale(.95);
 			background-color: @colour_dark;
 		}
 		95% {
-			transform: scale(1.01);
+			//transform: scale(1.01);
 		}
 		100% {
 			background-color: @colour_light;
-			transform: scale(1);
+			//transform: scale(1);
 		}
 	}
 	@-webkit-keyframes ~'@{animation_name}' {
 		25%{
-			-webkit-transform: scale(.95);
+			//-webkit-transform: scale(.95);
 			background-color: @colour_dark;
 		}
 		95% {
-			-webkit-transform: scale(1.01);
+			//-webkit-transform: scale(1.01);
 		}
 		100% {
 			background-color: @colour_light;
-			-webkit-transform: scale(1);
+			//-webkit-transform: scale(1);
 		}
 	}
 	@-moz-keyframes ~'@{animation_name}' {
 		25%{
-			-moz-transform: scale(.95);
+			//-moz-transform: scale(.95);
 			background-color: @colour_dark;
 		}
 		95% {
-			-moz-transform: scale(1.01);
+			//-moz-transform: scale(1.01);
 		}
 		100% {
 			background-color: @colour_light;
-			-moz-transform: scale(1);
+			//-moz-transform: scale(1);
 		}
 	}
 	@-ms-keyframes ~'@{animation_name}' {
 		25%{
-			-ms-transform: scale(.95);
+			//-ms-transform: scale(.95);
 			background-color: @colour_dark;
 		}
 		95% {
-			-ms-transform: scale(1.01);
+			//-ms-transform: scale(1.01);
 		}
 		100% {
 			background-color: @colour_light;
-			-ms-transform: scale(1);
+			//-ms-transform: scale(1);
 		}
 	}
 	@-o-keyframes ~'@{animation_name}' {
 		25%{
-			-o-transform: scale(.95);
+			//-o-transform: scale(.95);
 			background-color: @colour_dark;
 		}
 		95% {
-			-o-transform: scale(1.01);
+			//-o-transform: scale(1.01);
 		}
 		100% {
 			background-color: @colour_light;
-			-o-transform: scale(1);
+			//-o-transform: scale(1);
 		}
 	}
 }
@@ -82,67 +82,67 @@
 
 	@keyframes ~'@{animation_name}' {
 		25%{
-			transform: scale(.95);
+			//transform: scale(.95);
 			background-color: @colour_dark;
 		}
 		95% {
-			transform: scale(1.01);
+			//transform: scale(1.01);
 		}
 		100% {
 			background-color: @colour_light;
-			transform: scale(1);
+			//transform: scale(1);
 		}
 	}
 	@-webkit-keyframes ~'@{animation_name}' {
 		25%{
-			-webkit-transform: scale(.95);
+			//-webkit-transform: scale(.95);
 			background-color: @colour_dark;
 		}
 		95% {
-			-webkit-transform: scale(1.01);
+			//-webkit-transform: scale(1.01);
 		}
 		100% {
 			background-color: @colour_light;
-			-webkit-transform: scale(1);
+			//-webkit-transform: scale(1);
 		}
 	}
 	@-moz-keyframes ~'@{animation_name}' {
 		25%{
-			-moz-transform: scale(.95);
+			//-moz-transform: scale(.95);
 			background-color: @colour_dark;
 		}
 		95% {
-			-moz-transform: scale(1.01);
+			//-moz-transform: scale(1.01);
 		}
 		100% {
 			background-color: @colour_light;
-			-moz-transform: scale(1);
+			//-moz-transform: scale(1);
 		}
 	}
 	@-ms-keyframes ~'@{animation_name}' {
 		25%{
-			-ms-transform: scale(.95);
+			//-ms-transform: scale(.95);
 			background-color: @colour_dark;
 		}
 		95% {
-			-ms-transform: scale(1.01);
+			//-ms-transform: scale(1.01);
 		}
 		100% {
 			background-color: @colour_light;
-			-ms-transform: scale(1);
+			//-ms-transform: scale(1);
 		}
 	}
 	@-o-keyframes ~'@{animation_name}' {
 		25%{
-			-o-transform: scale(.95);
+			//-o-transform: scale(.95);
 			background-color: @colour_dark;
 		}
 		95% {
-			-o-transform: scale(1.01);
+			//-o-transform: scale(1.01);
 		}
 		100% {
 			background-color: @colour_light;
-			-o-transform: scale(1);
+			//-o-transform: scale(1);
 		}
 	}
 }
