--- a/src/styles/main-nav.less
+++ b/src/styles/main-nav.less
@@ -23,7 +23,10 @@
 		margin: 0px 15px;
 		padding-bottom: 5px;
 
-		&:hover, &.active {
+		&:hover {
+			border-bottom: 3px solid @local_feature_colour_dark;
+		}
+		&.active {
 			border-bottom: 3px solid @local_feature_colour;
 		}
 	}
