--- a/src/styles/modal.less
+++ b/src/styles/modal.less
@@ -1,5 +1,5 @@
 .modal {
-	background-color: @primary_colour;
+	background-color: @black;
 	position: absolute;
 	top: 0px;
 	bottom: 0px;
@@ -7,7 +7,7 @@
 	right: 0px;
 	height: auto;
 	width: auto;
-	opacity: .5;
+	opacity: 0.7;
 	.modal-close-animation(modal_close_keyframes);
 
 	&.open {
