--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -26,12 +26,12 @@
 @import 'tabs';
 
 * {
-	box-sizing:border-box;
+	.box-sizing(border-box);
 	-webkit-font-smoothing: antialiased;
 }
 
 [class^="introjs"] {
-	box-sizing: content-box;
+	.box-sizing(content-box);
 }
 
 .center {
@@ -66,46 +66,60 @@ a {
 
 }
 
+
+
 .colour-table {
 	table-layout: fixed;
 	min-width: 700px;
+	max-width: 100%;
+	.small;
 }
-.colour-table .row_header { text-align: left;}
-.colour-table th { overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
 .colour-table tr td { width: 20%; }
+.colour-table th, .colour-table .row_header {
+	text-align: left;
+	padding-right: 10px;
+	font-weight: bold;
+	min-width: 70px;
+}
+.colour-table .colour_swatch {
+	color: black;
+	border: 1px solid @local_white;
+	padding: 20px 10px;
+	.small;
+}
+.colour-table .dark .colour_swatch,
+.colour-table .black.colour_swatch {
+	color: white;
+}
+
+
 
 .module {
-	position:relative;
+	display: inline-block;
 	box-sizing: border-box;
-	padding-top: 15px;
+	border-radius: 5px;
+	position:relative;
 	padding: 10px;
 	width: 100%;
-	//border: solid 1px gray;
 	min-height: 240px;
-	border-radius: 5px;
-	margin: 5px;
-	display: inline-block;
-	-webkit-box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.15);
-	-moz-box-shadow:    1px 1px 5px 0px rgba(50, 50, 50, 0.15);
-	box-shadow:         1px 1px 5px 0px rgba(50, 50, 50, 0.15);
+	margin: 10px 0;
+	overflow: auto;
+	.box-shadow(1px 1px 5px 0px rgba(50, 50, 50, 0.3));
 }
 .module > h2.center { text-align: center; margin-bottom: 10px; }
-
 .module > .example > .title { border-bottom: inset 1px gray; margin-bottom: 15px;  padding-left: 10px;}
 .module .example {
 	box-sizing: border-box;
 	border-radius: 5px;
 	padding: 10px;
-	border-radius: 5px;
-	box-sizing: border-box;
 }
-
 .module .pageLayoutExample {
 	position:relative;
 	width: 100%;
 	height: 250px;
-
 }
+
+
 
 .note:before { content:"Note: "}
 .note {
@@ -113,6 +127,8 @@ a {
 	font-style: italic;
 	font-size: 0.8em;
 }
+
+
 
 .notifyListExampleWrap {
 	position: relative;
