Style review from Charlotte

--- a/src/styles/betslip.less
+++ b/src/styles/betslip.less
@@ -19,6 +19,8 @@
 	}
 
 	.header {
+		color: @local_white;
+		background-color: @local_primary_colour_dark;
 		padding: 10px;
 		font-weight: bold;
 	}
