--- a/src/styles/modal.less
+++ b/src/styles/modal.less
@@ -1,102 +1,84 @@
 .modal {
 	background-color: @black;
 	position: absolute;
-	top: 0px;
-	bottom: 0px;
-	left: 0px;
-	right: 0px;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 	height: auto;
 	width: auto;
-	opacity: 0.7;
 	.modal-close-animation(modal_close_keyframes);
+	display: none;
 
 	&.open {
 		.modal-open-animation(modal_open_keyframes);
+		display: block;
 	}
 }
 
 
 .modal-close-animation(@animation_name) {
-	-webkit-animation: @animation_name 750ms 1 ease-in normal forwards;
-	-moz-animation: @animation_name 750ms 1 ease-in normal forwards;
-	-ms-animation: @animation_name 750ms 1 ease-in normal forwards;
-	-o-animation: @animation_name 750ms 1 ease-in normal forwards;
-	animation: @animation_name 750ms 1 ease-in normal forwards;
+	-webkit-animation: @animation_name 250ms 1 ease-in normal forwards;
+	-moz-animation: @animation_name 250ms 1 ease-in normal forwards;
+	-ms-animation: @animation_name 250ms 1 ease-in normal forwards;
+	-o-animation: @animation_name 250ms 1 ease-in normal forwards;
+	animation: @animation_name 250ms 1 ease-in normal forwards;
 }
 .modal-close-keyframes(modal_close_keyframes, @black, @black, @black);
 
 
 .modal-open-animation(@animation_name) {
-	-webkit-animation: @animation_name 750ms 1 ease-in normal forwards;
-	-moz-animation: @animation_name 750ms 1 ease-in normal forwards;
-	-ms-animation: @animation_name 750ms 1 ease-in normal forwards;
-	-o-animation: @animation_name 750ms 1 ease-in normal forwards;
-	animation: @animation_name 750ms 1 ease-in normal forwards;
+	-webkit-animation: @animation_name 250ms 1 ease-in normal forwards;
+	-moz-animation: @animation_name 250ms 1 ease-in normal forwards;
+	-ms-animation: @animation_name 250ms 1 ease-in normal forwards;
+	-o-animation: @animation_name 250ms 1 ease-in normal forwards;
+	animation: @animation_name 250ms 1 ease-in normal forwards;
 }
 .modal-open-keyframes(modal_open_keyframes, @black, @black, @black);
 
+
 .modal-open-keyframes(@animation_name, @colour, @colour_light, @colour_dark) {
 	@keyframes ~'@{animation_name}' {
-		0% { transform: scale(0) }
-		95% { transform: scale(1.01) }
-		99% { transform: scale(.98) }
-		100% { transform: scale(1) }
+		0% { opacity: 0; }
+		100% { opacity: 0.7; }
 	}
 	@-webkit-keyframes ~'@{animation_name}' {
-		0% { -webkit-transform: scale(0) }
-		95% { -webkit-transform: scale(1.01) }
-		99% { -webkit-transform: scale(.98) }
-		100% { -webkit-transform: scale(1) }
+		0% { -webkit-opacity: 0; }
+		100% { -webkit-opacity: 0.7; }
 	}
 	@-moz-keyframes ~'@{animation_name}' {
-		0% { -moz-transform: scale(0) }
-		95% { -moz-transform: scale(1.01) }
-		99% { -moz-transform: scale(.98) }
-		100% { -moz-transform: scale(1) }
+		0% { -moz-opacity: 0; }
+		100% { -moz-opacity: 0.7; }
 	}
 	@-o-keyframes ~'@{animation_name}' {
-		0% { -o-transform: scale(0) }
-		95% { -o-transform: scale(1.01) }
-		99% { -o-transform: scale(.98) }
-		100% { -o-transform: scale(1) }
+		0% { -o-opacity: 0; }
+		100% { -o-opacity: 0.7; }
 	}
 	@-ms-keyframes ~'@{animation_name}' {
-		0% { -ms-transform: scale(0) }
-		95% { -ms-transform: scale(1.01) }
-		99% { -ms-transform: scale(.98) }
-		100% { -ms-transform: scale(1) }
+		0% { -ms-opacity: 0; }
+		100% { -ms-opacity: 0.7; }
 	}
 }
 .modal-close-keyframes(@animation_name, @colour, @colour_light, @colour_dark) {
 	@keyframes ~'@{animation_name}' {
-		0% { transform: scale(1) }
-		5% { transform: scale(0.98) }
-		10% { transform: scale(1.01) }
-		100% { transform: scale(0) }
+		0% { opacity: 0.7; }
+		100% { opacity: 0; }
 	}
 	@-webkit-keyframes ~'@{animation_name}' {
-		0% { -webkit-transform: scale(1); }
-		1% { -webkit-transform: scale(.95); }
-		5% { -webkit-transform: scale(1.01); }
-		100% { -webkit-transform: scale(0); }
+		0% { -webkit-opacity: 0.7; }
+		100% { -webkit-opacity: 0; }
 	}
 	@-moz-keyframes ~'@{animation_name}' {
-		0% { -moz-transform: scale(1); }
-		1% { -moz-transform: scale(.95); }
-		5% { -moz-transform: scale(1.01); }
-		100% { -moz-transform: scale(0); }
+		0% { -moz-opacity: 0.7; }
+		100% { -moz-opacity: 0; }
 	}
 	@-o-keyframes ~'@{animation_name}' {
-		0% { -o-transform: scale(1); }
-		1% { -o-transform: scale(.95); }
-		5% { -o-transform: scale(1.01); }
-		100% { -o-transform: scale(0); }
+		0% { -o-opacity: 0.7; }
+		100% { -o-opacity: 0; }
 	}
 
 	@-ms-keyframes ~'@{animation_name}' {
-		0% { -ms-transform: scale(1); }
-		1% { -ms-transform: scale(.95); }
-		5% { -ms-transform: scale(1.01); }
-		100% { -ms-transform: scale(0); }
+		0% { -ms-opacity: 0.7; }
+		100% { -ms-opacity: 0; }
 	}
 }
