Style review from Charlotte: Larger font on mainnav, apply transition on buttons and lists, round border on ticket and bets X mark

--- a/src/styles/betslip.less
+++ b/src/styles/betslip.less
@@ -58,6 +58,8 @@
 		border-color: @local_primary_colour_dark;
 		background-color: @local_primary_colour_light;
 		color: @local_primary_colour_dark;
+		padding: 0;
+		.small;
 	}
 
 	.betSuccessAccountInfo {
