--- a/src/styles/lists.less
+++ b/src/styles/lists.less
@@ -60,6 +60,7 @@
 		min-height: @local_height;
 		padding-left: 5px;
 		position: relative;
+		.transition(all 250ms ease);
 
 		&:first-child { border-top: none; }
 		&:hover { background-color: @local_primary_light; }
