--- a/src/styles/bet.less
+++ b/src/styles/bet.less
@@ -30,15 +30,22 @@
 	}
 	.actions {
 		float: right;
+		width: 20px;
+		height: 20px;
+		border: 1px solid @local_negative_colour;
+		.border-radius(100%);
+		.transition(all 250ms ease);
 
 		.delete {
 			color: @local_negative_colour;
-			padding: 10px;
-			.transition(all 0.25s ease);
+			display: block;
+			padding: 0 5px;
+			line-height: 1.2em;
+			.small;
+		}
 
-			&:hover {
-				background-color: @local_negative_colour_light;
-			}
+		&.hover {
+			background-color: @local_negative_colour_light;
 		}
 	}
 
@@ -53,7 +60,9 @@
 	}
 
 	.bonusBetContainer {
-		padding: 5px 0;
+		display: inline-block;
+		width: 100%;
+		padding: 10px 0;
 	}
 
 	.placementDetails.success,
